--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,12 +10,12 @@
 /* Default settings for all */
 html {
   scroll-behavior: smooth;
-  font-size: 1vw;
+  font-size: 16px;
 }
 
 body {
   /* font-size: 22px; */
-  font-family: "Rubik", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 /* Normal flow of document */
 #root {
@@ -38,8 +38,8 @@ body {
   width: 30%;
   padding: 0 2rem;
   font-size: 3rem;
-  font-weight: 500;
-  text-align: right;
+  font-weight: 700;
+  text-align: left;
 }
 
 /* Navigation menu settings */
@@ -57,7 +57,7 @@ nav {
   padding: 0 3rem;
   color: #adb5bd;
   font-size: 1.5rem;
-  font-weight: 500;
+  font-family: "Carter One";
 }
 
 nav ul {
@@ -74,7 +74,7 @@ nav ul li {
 nav ul li a {
   color: #adb5bd;
   font-size: 1rem;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 nav ul li a.active,
@@ -85,17 +85,22 @@ nav ul li a:hover {
 }
 
 .checkbtn {
-  font-size: 30px;
+  font-size: 1.5em;
   color: #adb5bd;
   float: right;
   line-height: 80px;
-  margin-right: 40px;
+  margin-right: 2rem;
   cursor: pointer;
   display: none;
 }
 
 #check {
   display: none;
+}
+
+#landing-div {
+  height: max-content;
+  position: relative;
 }
 
 /* particles div settings */
@@ -118,36 +123,26 @@ nav ul li a:hover {
   position: relative;
   width: 100%;
   min-height: 100vh;
+  /* padding-top: 80px; */
   top: 0;
   left: 0;
 }
 
 /* About section */
 #about-card {
-  position: absolute;
   width: 100%;
-  height: min-content;
-  /* max-height: 700px; */
-  bottom: 0;
-
-  background-color: rgba(255, 255, 255, 0.08);
-  border-top-left-radius: 2em;
-  border-top-right-radius: 2em;
+  min-height: calc(100vh - 80px);
   color: white;
-  padding: 0px;
+  background-color: rgba(255, 255, 255, 0.08);
 
   display: flex;
-  flex-direction: row;
-  min-height: 400px;
+  align-items: center;
 }
 
 /* Social profile */
 #social-me {
   padding: 2em;
-  /* float: left; */
   flex: 0.4;
-  position: relative;
-  top: -12vw;
 }
 
 #social-links {
@@ -179,13 +174,32 @@ nav ul li a:hover {
 #about-me {
   padding: 4rem;
   flex: 0.6;
-  /* float: right; */
-  max-width: 1000px;
 }
 
 #about-me > p {
   text-align: justify;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
+}
+
+#download-cv {
+  display: flex;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.5);
+  width: max-content;
+  height: max-content;
+  padding: 0.4em 0.6em;
+  border-radius: 0.4em;
+}
+
+#download-cv .ionicon > path {
+  fill: black;
+}
+
+#download-cv a {
+  color: black;
+  font-size: 1.1em;
+  font-weight: 600;
+  padding-left: 0.5em;
 }
 
 /* Profile image */
@@ -232,14 +246,10 @@ nav ul li a:hover {
   margin-bottom: 1rem;
   padding: 2rem;
   height: min-content;
+  overflow: hidden;
   border-radius: 0.8rem;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-}
-
-.paper-div > a {
-  max-height: 200px;
-  color: black;
 }
 
 .expanded-paper {
@@ -250,10 +260,15 @@ nav ul li a:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.paper-div a h4 {
+.paper-div h4 {
   /* padding-bottom: 0.4em; */
-  font-size: 1.2rem;
-  font-weight: 500;
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+.award {
+  color: blue;
+  font-weight: 600;
 }
 
 .event-paper {
@@ -264,25 +279,128 @@ nav ul li a:hover {
 }
 
 .event-paper > p {
-  font-size: 0.8rem;
-  font-weight: 500;
+  font-size: 1rem;
+  font-weight: 600;
 }
 
 .event-paper p a {
-  font-size: 0.8rem;
+  font-size: 1rem;
   padding-left: 1rem;
 }
 
 .paper-author {
   padding-top: 1rem;
-  font-size: 0.8rem;
+  font-size: 1rem;
+  font-weight: 600;
   color: rgba(0, 0, 0, 0.6);
 }
 
+.ellipsis-toggle {
+  cursor: pointer;
+  display: flex;
+  width: max-content;
+  padding: 0.3em;
+  margin-top: 0.5em;
+  border: 2px solid #495464;
+  border-radius: 0.3em;
+  background-color: white;
+  transition: all 0.25s ease-out;
+}
+
+.ellipsis-toggle .ionicon {
+  padding: 0;
+  height: 1.3em;
+}
+
+.extra-paper-details {
+  max-height: 0px;
+  overflow: hidden;
+  margin-top: 1em;
+  border-radius: 7px;
+
+  transition: max-height 0.8s ease;
+}
+
+.extra-paper-details-inner div {
+  margin-bottom: 1em;
+}
+
+.extra-paper-details-inner div p {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+
+.extra-paper-details-inner div ul {
+  width: max-content;
+}
+
+.extra-paper-details-inner div ul li {
+  margin: 0.8em;
+  padding: 0.5em;
+  width: 100%;
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 8px 3px lightgray;
+}
+
+.paper-extra-points ul li a {
+  padding-left: 0.4em;
+}
+
+.paper-videos div {
+  display: flex;
+  overflow: auto;
+}
+
+.paper-videos div iframe {
+  margin: 0.5em;
+  padding: 0.5em;
+  width: 250px;
+  height: 150px;
+
+  /* min-width: 150px;
+  min-height: 80px;
+
+  max-width: 250px;
+  max-height: 150px; */
+
+  border-radius: 0.5em;
+  box-shadow: 2px 2px 8px 3px lightgray;
+}
+
+.show-paper-details {
+  max-height: 100vh;
+}
+
 @media (max-width: 1200px) {
-  body {
-    font-size: calc(16px + 2 * ((100vw - 950px) / 680));
-    /* font-size: 17px; */
+  html {
+    font-size: 2.5vw;
+  }
+
+  nav {
+    visibility: hidden;
+    opacity: 1;
+  }
+
+  nav .checkbtn {
+    visibility: visible;
+    display: flex;
+    align-items: center;
+    height: 80px;
+  }
+
+  nav label .ionicon {
+    width: 1.5em;
+    height: 1.5em;
+    opacity: 1.0;
+  }
+
+  nav ul {
+    visibility: visible;
+    display: none;
+  }
+
+  #home {
+    padding-top: 0;
   }
 
   #brand {
@@ -291,50 +409,67 @@ nav ul li a:hover {
 
   #about-card {
     flex-direction: column;
-    max-height: 70%;
-  }
-
-  #about-me {
-    max-width: 100%;
-    flex: 1;
-    position: relative;
-    top: -25vw;
+    padding-top: 10em;
+    min-height: 100vh;
   }
 
   #social-me {
+    flex: 0.4;
+    margin-top: 2em;
+  }
+
+  #about-me {
     flex: 1;
-    min-width: max-content;
-    top: -12vh;
+    padding: 1.5em 2em;
   }
   
   .checkbtn {
     display: block;
   }
 
-  nav ul {
-    display: none;
-  }
-
   nav ul li {
     display: block;
-    /* margin: 50px 0;
-    line-height: 30px; */
+    line-height: 50px;
+    margin-right: 2.5rem;
+  }
+
+  nav ul li a {
+    font-size: 1.2em;
   }
 
   nav ul.menu-clicked {
     background: rgba(0, 0, 0, 0.9);
-    text-align: center;
+    text-align: right;
     display: block;
     position: fixed;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     top: 80px;
     left: 0;
     transition: all 0.5s;
   }
+
+  #papers {
+    padding: 0;
+    flex-direction: column;
+  }
+
+  .section-title {
+    line-height: 80px;
+  }
+
+  #papers-list {
+    padding: 0 1rem;
+  }
 }
 
-@media (max-width: 820px) {
+@media (max-width: 1200px) and (min-width: 500px) {
+  html {
+    font-size: 13px;
+  }
+}
+
+/* @media (max-width: 820px) {
   .section-title {
     font-size: 2.2rem;
     text-align: left;
@@ -365,7 +500,7 @@ nav ul li a:hover {
   .paper-author {
     font-size: 0.85rem;
   }
-}
+} */
 
 /* @media screen and (max-width: 1200px) {
   body {
@@ -398,7 +533,7 @@ nav ul li a:hover {
   }
 } */
 
-@media (-webkit-min-device-pixel-ratio: 4), (min-resolution: 192dpi) {
+/* @media (-webkit-min-device-pixel-ratio: 4), (min-resolution: 192dpi) {
   html {
     font-size: larger;
   }
@@ -432,8 +567,6 @@ nav ul li a:hover {
 
   nav ul li {
     display: block;
-    /* margin: 50px 0; */
-    /* line-height: 40px; */
     padding-bottom: 1em;
     border-style: g;
   }
@@ -481,4 +614,4 @@ nav ul li a:hover {
   .paper-author {
     font-size: 0.85rem;
   }
-}
+} */
