--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -73,7 +73,7 @@ nav ul li {
 
 nav ul li a {
   color: #adb5bd;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: 700;
 }
 
@@ -131,7 +131,7 @@ nav ul li a:hover {
 /* About section */
 #about-card {
   width: 100%;
-  min-height: calc(100vh - 80px);
+  min-height: 100vh;
   color: white;
   background-color: rgba(255, 255, 255, 0.08);
 
@@ -243,7 +243,7 @@ nav ul li a:hover {
 }
 
 .paper-div {
-  margin-bottom: 1rem;
+  margin: 0.5rem 0.5em;
   padding: 2rem;
   height: min-content;
   overflow: hidden;
