--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,23 +11,36 @@
 html {
   scroll-behavior: smooth;
   font-size: 16px;
-
-  -webkit-tap-highlight-color:transparent;
+  -webkit-overflow-scrolling: touch;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
   /* font-size: 22px; */
   font-family: "Nunito", sans-serif;
 }
+
 /* Normal flow of document */
 #root {
   display: flex;
   flex-direction: column;
 }
+
+#scroll-snap-container {
+  height: 100vh;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+}
+
+.scroll-snap {
+  scroll-snap-align: start;
+}
+
 /* Header font settings */
 .heading2 {
   font-size: 2rem;
-  margin-bottom: 0.3rem;
+  margin: 1rem 0;
 }
 
 .heading3 {
@@ -35,13 +48,22 @@ body {
   margin-bottom: 0.5rem;
 }
 
+.heading3 > a {
+  color: white;
+}
+
+.heading3 > a:hover {
+  color: cornflowerblue;
+  font-weight: 700;
+}
+
 /* Default settings for section headers */
 .section-title {
   width: 30%;
-  padding: 0 2rem;
+  padding: 1rem 4rem;
   font-size: 3rem;
   font-weight: 700;
-  text-align: left;
+  text-align: right;
 }
 
 /* Navigation menu settings */
@@ -52,6 +74,7 @@ nav {
   box-shadow: 0 0 25px 0 black;
   z-index: 9999;
   position: fixed;
+  visibility: visible;
 }
 
 #brand {
@@ -125,6 +148,7 @@ nav ul li a:hover {
   position: relative;
   width: 100%;
   min-height: 100vh;
+  /* height: auto; */
   /* padding-top: 80px; */
   top: 0;
   left: 0;
@@ -152,6 +176,7 @@ nav ul li a:hover {
   border-radius: 0.5em;
   width: max-content;
   margin: auto;
+  padding: 1em;
 }
 
 .social-media-img {
@@ -163,8 +188,8 @@ nav ul li a:hover {
 
 .ionicon {
   opacity: 0.8;
-  width: 2em;
-  height: 2em;
+  width: 2.5em;
+  height: 2.5em;
   padding: 0.2em;
 }
 
@@ -183,7 +208,34 @@ nav ul li a:hover {
   font-size: 1.3rem;
 }
 
+#contact {
+  display: flex;
+  width: 100%;
+  color: lightgray;
+
+  border-top-style: solid;
+  border-top-color: rgba(255, 255, 255, 0.1);
+  border-radius: 1rem;
+  padding: 1em 0.6em 0 0.6em;
+}
+
+#contact span {
+  font-weight: 600;
+}
+
+.contact-left {
+  flex: 0.5;
+  font-size: 1.2rem;
+}
+
+.contact-right {
+  flex: 0.5;
+  text-align: right;
+  font-size: 1.2rem;
+}
+
 #download-cv {
+  text-decoration: none;
   display: flex;
   align-items: center;
   background: rgba(255, 255, 255, 0.5);
@@ -191,17 +243,15 @@ nav ul li a:hover {
   height: max-content;
   padding: 0.4em 0.6em;
   border-radius: 0.4em;
+
+  color: black;
+  font-size: 1.2em;
+  font-weight: 600;
+  padding-left: 0.5em;
 }
 
 #download-cv .ionicon > path {
   fill: black;
-}
-
-#download-cv a {
-  color: black;
-  font-size: 1.1em;
-  font-weight: 600;
-  padding-left: 0.5em;
 }
 
 /* Profile image */
@@ -228,24 +278,40 @@ nav ul li a:hover {
   text-align: center;
 }
 
-#papers {
+.page-section:not(#home) {
+  display: flex;
+  padding-top: calc(80px + 1rem);
+  padding-bottom: 1rem;
+  /* height: max-content; */
+  height: 100vh;
+}
+
+/* #papers {
   display: flex;
   padding-top: calc(80px + 1rem);
   padding-bottom: 1rem;
   height: 100vh;
-}
+} */
 
-#papers-list {
+#papers-list, #posters-list, 
+#teaching-list, #supervision-list, #talks-list, 
+#education-list, #activity-list {
   display: flex;
   flex-direction: column;
   padding: 1rem 3rem;
   width: 100%;
-  max-width: 800px;
+  /* height: calc(100vh - 100px); */
+  max-width: 1000px;
   overflow: auto;
 }
 
-.paper-div {
-  margin: 0.5rem 0.5em;
+/* #activity-list, #education-list {
+  height: max-content;
+  padding-bottom: 5rem;
+} */
+
+.paper-div, .poster-div {
+  margin: 1rem 0.5em;
   padding: 2rem;
   height: min-content;
   overflow: hidden;
@@ -258,13 +324,16 @@ nav ul li a:hover {
   max-height: min-content;
 }
 
-.paper-div:hover {
+.paper-div:hover, .poster-div:hover, 
+.teaching-div:hover, .education-div:hover, 
+.talk-div:hover, .activity-div:hover,
+.supervision-div:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
-.paper-div h4 {
+.paper-div h4, .poster-div h4 {
   /* padding-bottom: 0.4em; */
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 700;
 }
 
@@ -273,26 +342,26 @@ nav ul li a:hover {
   font-weight: 600;
 }
 
-.event-paper {
+.event {
   display: flex;
   padding-top: 0.5rem;
   margin-top: 1rem;
   border-top: outset;
 }
 
-.event-paper > p {
-  font-size: 1rem;
+.event > p {
+  font-size: 0.95rem;
   font-weight: 600;
 }
 
-.event-paper p a {
+.event p a {
   font-size: 1rem;
   padding-left: 1rem;
 }
 
-.paper-author {
+.authors {
   padding-top: 1rem;
-  font-size: 1rem;
+  font-size: 0.95rem;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.6);
 }
@@ -322,6 +391,10 @@ nav ul li a:hover {
 
   transition: max-height 0.8s ease;
 }
+/* 
+.extra-paper-details-inner {
+  padding: 0.2em;
+} */
 
 .extra-paper-details-inner div {
   margin-bottom: 1em;
@@ -351,19 +424,14 @@ nav ul li a:hover {
 .paper-videos div {
   display: flex;
   overflow: auto;
+  padding: 0.5em;
 }
 
 .paper-videos div iframe {
   margin: 0.5em;
-  padding: 0.5em;
-  width: 250px;
-  height: 150px;
-
-  /* min-width: 150px;
-  min-height: 80px;
-
-  max-width: 250px;
-  max-height: 150px; */
+  padding: 0.2em;
+  width: 400px;
+  height: 230px;
 
   border-radius: 0.5em;
   box-shadow: 2px 2px 8px 3px lightgray;
@@ -373,6 +441,120 @@ nav ul li a:hover {
   max-height: 100vh;
 }
 
+.teaching-div {
+  margin: 1rem 0.5rem;
+  width: 45vw;
+  height: min-content;
+  overflow: hidden;
+  border-radius: 0.8rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.05s;
+
+  font-size: 1.4em;
+  font-weight: 700;
+  color: #2d3436;
+
+  display: flex;
+}
+
+.teaching-div > div {
+  flex: auto;
+
+  padding: 1.5rem;
+}
+
+.teaching-div img {
+  /* flex: 0.2; */
+
+  height: 150px;
+}
+
+.teaching-div div a {
+  font-size: 0.8em;
+  padding-left: 1em;
+}
+
+.teaching-div div p {
+  font-size: 0.9em;
+  font-weight: 600;
+  color: gray;
+
+  padding: 0.4rem 0;
+}
+
+.teaching-details span {
+  font-size: 0.9em;
+  font-weight: 600;
+  color: gray;
+}
+
+.education-div, .talk-div, .activity-div, .supervision-div {
+  margin: 1rem 0.5rem;
+  padding: 1.5rem;
+  /* width: 45vw; */
+  height: min-content;
+  overflow: hidden;
+  border-radius: 0.8rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.05s;
+
+  color: #2d3436;
+}
+
+.education-div > p {
+  font-size: 1.2em;
+  font-weight: 600;
+  padding-top: 0.6rem;
+  opacity: 0.7;
+}
+
+.education-div > p:first-child, .talk-div > p, .activity-div > span {
+  font-size: 1.4rem;
+  font-weight: 700;
+
+  padding-top: 0;
+  opacity: 1;
+}
+
+.activity-div > span {
+  font-size: 1.2rem;
+}
+
+.talk-div > div {
+  padding-top: 0.8rem;
+
+  color: rgba(0, 0, 0, 0.9);
+  font-weight: 600;
+}
+
+#supervision-list div div > label {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+.supervision-div div {
+  font-size: 1.2rem;
+  font-weight: 600;
+}
+
+.supervision-div div span {
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.supervision-div > div:first-child {
+  padding-bottom: 0.7rem;
+}
+
+.supervision-div > div:first-child > span {
+  color: #2d3436;
+}
+
+#posters, #supervision, #talks {
+  background-color: #e9ecef;
+}
+
+
+
 @media (max-width: 1200px) {
   html {
     font-size: 2.5vw;
@@ -381,13 +563,19 @@ nav ul li a:hover {
   nav {
     visibility: hidden;
     opacity: 1;
+    height: 100px;
+  }
+
+  #brand {
+    line-height: 100px;
   }
 
   nav .checkbtn {
     visibility: visible;
     display: flex;
     align-items: center;
-    height: 80px;
+    /* height: 80px; */
+    line-height: 100px;
   }
 
   nav label .ionicon {
@@ -401,6 +589,10 @@ nav ul li a:hover {
     display: none;
   }
 
+  nav ul li {
+    line-height: 100px;
+  }
+
   #home {
     padding-top: 0;
   }
@@ -411,12 +603,12 @@ nav ul li a:hover {
 
   #about-card {
     flex-direction: column;
-    padding-top: 10em;
+    padding-top: 100px;
     min-height: 100vh;
   }
 
   #social-me {
-    flex: 0.4;
+    flex: 0.3;
     margin-top: 2em;
   }
 
@@ -446,22 +638,38 @@ nav ul li a:hover {
     position: fixed;
     width: 100%;
     /* height: 100vh; */
-    top: 80px;
+    top: 100px;
     left: 0;
     transition: all 0.5s;
   }
 
-  #papers {
+  .page-section:not(#home) {
     padding: 0;
     flex-direction: column;
   }
 
   .section-title {
-    line-height: 80px;
+    line-height: 100px;
+    padding: 0 1.5rem;
+    text-align: left;
   }
 
-  #papers-list {
+  #papers-list, #posters-list, 
+  #teaching-list, #talks-list, #supervision-list, 
+  #education-list, #activity-list {
     padding: 0 1rem;
+  }
+
+  /* #education-list, #activity-list {
+    padding-bottom: 5rem;
+  } */
+
+  .teaching-div {
+    width: auto;
+  }
+
+  .teaching-div img {
+    height: 120px;
   }
 }
 
@@ -470,7 +678,6 @@ nav ul li a:hover {
     font-size: 13px;
   }
 }
-
 /* @media (max-width: 820px) {
   .section-title {
     font-size: 2.2rem;
@@ -494,8 +701,8 @@ nav ul li a:hover {
     font-size: 1rem;
   }
 
-  .event-paper p a,
-  .event-paper p {
+  .event p a,
+  .event p {
     font-size: 0.85rem;
   }
 
@@ -608,8 +815,8 @@ nav ul li a:hover {
     font-size: 1rem;
   }
 
-  .event-paper p a,
-  .event-paper p {
+  .event p a,
+  .event p {
     font-size: 0.85rem;
   }
 
