--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,6 +5,7 @@
   text-decoration: none;
   list-style: none;
   box-sizing: border-box;
+  outline: none;
 }
 
 /* Default settings for all */
@@ -35,6 +36,7 @@ body {
 
 .scroll-snap {
   scroll-snap-align: center;
+  /* scroll-snap-stop: always; */
 }
 
 /* Header font settings */
@@ -148,8 +150,6 @@ nav ul li a:hover {
   position: relative;
   width: 100%;
   min-height: 100vh;
-  /* height: auto; */
-  /* padding-top: 80px; */
   top: 0;
   left: 0;
 }
@@ -241,13 +241,17 @@ nav ul li a:hover {
   background: rgba(255, 255, 255, 0.5);
   width: max-content;
   height: max-content;
-  padding: 0.4em 0.6em;
+  padding: 0.3em 0.6em .3em .4em;
   border-radius: 0.4em;
 
   color: black;
   font-size: 1.2em;
   font-weight: 600;
-  padding-left: 0.5em;
+}
+
+#download-cv .ionicon {
+  width: 2em;
+  height: 2em;
 }
 
 #download-cv .ionicon > path {
@@ -285,13 +289,6 @@ nav ul li a:hover {
   /* height: max-content; */
   height: 100vh;
 }
-
-/* #papers {
-  display: flex;
-  padding-top: calc(80px + 1rem);
-  padding-bottom: 1rem;
-  height: 100vh;
-} */
 
 #papers-list, #posters-list, 
 #teaching-list, #supervision-list, #talks-list, 
@@ -361,7 +358,7 @@ nav ul li a:hover {
 
 .authors {
   padding-top: 1rem;
-  font-size: 0.95rem;
+  font-size: 1rem;
   font-weight: 600;
   color: rgba(0, 0, 0, 0.6);
 }
@@ -369,7 +366,8 @@ nav ul li a:hover {
 .ellipsis-toggle {
   cursor: pointer;
   display: flex;
-  width: max-content;
+  justify-content: center;
+  width: 5em;
   padding: 0.3em;
   margin-top: 0.5em;
   border: none;
@@ -377,8 +375,6 @@ nav ul li a:hover {
   background-color: white;
   box-shadow: 2px 2px 8px 3px lightgray;
   transition: all 0.15s ease-in-out;
-
-  outline: none;
 }
 
 .ellipsis-toggle:hover {
@@ -390,8 +386,9 @@ nav ul li a:hover {
 }
 
 .ellipsis-toggle span {
-  width: 2rem;
-  text-align: right;
+  min-width: min-content;
+  width: 4em;
+  margin-right: 0.2em;
 }
 
 .ellipsis-toggle .ionicon {
