--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -61,7 +61,7 @@ body {
 
 /* Default settings for section headers */
 .section-title {
-  width: 30%;
+  width: max-content;
   padding: 1rem 4rem;
   font-size: 3rem;
   font-weight: 700;
@@ -191,6 +191,14 @@ nav ul li a:hover {
   fill: white;
 }
 
+.ionicon:hover {
+  opacity: 1;
+}
+
+.ionicon:hover > path {
+  fill: deepskyblue;
+}
+
 /* About me text */
 #about-me {
   padding: 4rem;
@@ -291,7 +299,7 @@ nav ul li a:hover {
   flex-direction: column;
   padding: 1rem 3rem;
   width: 100%;
-  /* height: calc(100vh - 100px); */
+  height: calc(100vh - 100px);
   max-width: 1000px;
   /* overflow: auto; */
 }
@@ -340,7 +348,7 @@ nav ul li a:hover {
   border-top: outset;
 }
 
-.event > p {
+.event > p, .whatsnew-div p {
   font-size: 0.95rem;
   font-weight: 600;
 }
@@ -535,29 +543,29 @@ nav ul li a:hover {
   font-weight: 600;
 }
 
-#supervision-list div div > label,  #whatsnew-list div div > label{
+#supervision-list div div > label,  #whatsnew-list div div > label {
   font-size: 1.4rem;
   font-weight: 600;
 }
 
-.supervision-div div,  .whatsnew-div div{
+.supervision-div div,  .whatsnew-div h4 {
   font-size: 1.2rem;
   font-weight: 600;
 }
 
-.supervision-div div span, .whatsnew-div div span {
+.supervision-div div span, .whatsnew-div div h4 {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.supervision-div > div:first-child, .whatsnew-div > div:first-child{
+.supervision-div > div:first-child, .whatsnew-div > h4 {
   padding-bottom: 0.7rem;
 }
 
-.supervision-div > div:first-child > span, .whatsnew-div > div:first-child > span {
+.supervision-div > div:first-child > span {
   color: #2d3436;
 }
 
-#posters, #supervision, #talks {
+#posters, #supervision, #talks, #whatsnew {
   background-color: #e9ecef;
 }
 
@@ -664,13 +672,9 @@ nav ul li a:hover {
 
   #papers-list, #posters-list, 
   #teaching-list, #talks-list, #supervision-list, 
-  #education-list, #activity-list #whatsnew-list{
+  #education-list, #activity-list, #whatsnew-list {
     padding: 0 1rem;
   }
-
-  /* #education-list, #activity-list {
-    padding-bottom: 5rem;
-  } */
 
   .teaching-div {
     width: auto;
@@ -686,149 +690,3 @@ nav ul li a:hover {
     font-size: 13px;
   }
 }
-/* @media (max-width: 820px) {
-  .section-title {
-    font-size: 2.2rem;
-    text-align: left;
-    padding-left: 1rem;
-  }
-
-  #papers-list {
-    padding: 1rem;
-  }
-
-  #papers {
-    flex-direction: column;
-  }
-
-  .paper-div {
-    padding: 1.5rem;
-  }
-
-  .paper-div a h4 {
-    font-size: 1rem;
-  }
-
-  .event p a,
-  .event p {
-    font-size: 0.85rem;
-  }
-
-  .paper-author {
-    font-size: 0.85rem;
-  }
-} */
-
-/* @media screen and (max-width: 1200px) {
-  body {
-    font-size: calc(16px + 2 * ((100vw - 950px) / 680));
-  }
-
-  #brand {
-    padding-left: 1.5rem;
-  }
-
-  #about-card {
-    flex-direction: column;
-    max-height: 70%;
-  }
-
-  #about-me {
-    max-width: 100%;
-    flex: 1;
-  }
-
-  #social-me {
-    flex: 1;
-    min-width: max-content;
-  }
-} */
-
-/* @media screen and (min-width: 320px) {
-  body {
-    font-size: 17px;
-  }
-} */
-
-/* @media (-webkit-min-device-pixel-ratio: 4), (min-resolution: 192dpi) {
-  html {
-    font-size: larger;
-  }
-
-  .heading2 {
-    font-size: 1.3rem;
-    margin-bottom: 0.3rem;
-  }
-  
-  .desgn-dept-group {
-    font-size: 1.1rem;
-    margin-bottom: 0.5rem;
-  }
-
-  #brand {
-    font-size: 1.2rem;
-    padding-left: 1.5rem;
-  }
-  
-  #about-me > p {
-    font-size: 0.8rem;
-  }
-  
-  .checkbtn {
-    display: block;
-  }
-
-  nav ul {
-    display: none;
-  }
-
-  nav ul li {
-    display: block;
-    padding-bottom: 1em;
-    border-style: g;
-  }
-
-  nav ul.menu-clicked {
-    background: rgba(0, 0, 0, 0.9);
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 80px;
-    left: 0;
-    transition: all 0.5s;
-  }
-
-  .section-title {
-    font-size: 1.5em;
-    text-align: left;
-    padding-left: 1rem;
-  }
-
-  #papers-list {
-    padding: 1rem;
-  }
-
-  #papers {
-    flex-direction: column;
-  }
-
-  .paper-div {
-    padding: 1.5rem;
-  }
-
-  .paper-div a h4 {
-    font-size: 1rem;
-  }
-
-  .event p a,
-  .event p {
-    font-size: 0.85rem;
-  }
-
-  .paper-author {
-    font-size: 0.85rem;
-  }
-} */
