Footer fixes, structure for public paper, trying out new profile-pic

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -30,13 +30,13 @@ body {
   flex-direction: column;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  scroll-snap-type: y mandatory;
+  scroll-snap-type: y proximity;
   scrollbar-width: thin;
 }
 
 .scroll-snap {
   scroll-snap-align: center;
-  /* scroll-snap-stop: always; */
+  scroll-snap-stop: always;
 }
 
 /* Header font settings */
@@ -71,16 +71,16 @@ body {
 /* Navigation menu settings */
 nav {
   width: 100%;
-  height: 80px;
+  height: 90px;
   background-color: rgba(0, 0, 0, 0.83);
   box-shadow: 0 0 25px 0 black;
-  z-index: 9999;
+  z-index: 9998;
   position: fixed;
   visibility: visible;
 }
 
 #brand {
-  line-height: 80px;
+  line-height: 90px;
   padding: 0 3rem;
   color: #adb5bd;
   font-size: 1.5rem;
@@ -90,11 +90,14 @@ nav {
 nav ul {
   float: right;
   margin-right: 20px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 nav ul li {
   display: inline-block;
-  line-height: 80px;
+  line-height: 90px;
   margin: 0 1rem;
 }
 
@@ -115,10 +118,14 @@ nav ul li a:hover {
   font-size: 1.5em;
   color: #adb5bd;
   float: right;
-  line-height: 80px;
+  line-height: 100px;
+  height: 100px;
   margin-right: 2rem;
   cursor: pointer;
   display: none;
+  position: fixed;
+  right: 0;
+  z-index: 9999;
 }
 
 #check {
@@ -287,7 +294,7 @@ nav ul li a:hover {
 
 .page-section:not(#home) {
   display: flex;
-  padding-top: calc(80px + 1rem);
+  padding-top: calc(90px + 1rem);
   padding-bottom: 1rem;
   /* height: max-content; */
   height: 100vh;
@@ -570,10 +577,19 @@ nav ul li a:hover {
   background-color: #e9ecef;
 }
 
+#education {
+  position: relative;
+}
+
 #footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
   height: 10vh;
   background-color: #e9ecef;
   text-align: center;
+  font-weight: 600;
 }
 
 
@@ -583,32 +599,44 @@ nav ul li a:hover {
   }
 
   nav {
-    visibility: hidden;
     opacity: 1;
-    height: 100px;
+    height: max-content;
+    max-height: 0;
+    overflow: hidden;
+    background: rgba(0, 0, 0, 0.9);
+    transition: max-height 1s;
+  }
+
+  nav.menu-clicked {
+    max-height: 100vh;
   }
 
   #brand {
     line-height: 100px;
   }
 
-  nav .checkbtn {
-    visibility: visible;
+  #landing-div .checkbtn {
+    /* visibility: visible; */
     display: flex;
     align-items: center;
-    /* height: 80px; */
+    height: 100px;
     line-height: 100px;
   }
 
-  nav label .ionicon {
+  #landing-div label .ionicon {
     width: 1.5em;
     height: 1.5em;
     opacity: 1.0;
   }
 
   nav ul {
-    visibility: visible;
-    display: none;
+    flex-direction: column;
+    align-items: flex-end;
+    height: auto;
+    max-height: 100vh;
+    width: 100%;
+    text-align: right;
+    margin: auto;
   }
 
   nav ul li {
@@ -617,6 +645,11 @@ nav ul li a:hover {
 
   #home {
     padding-top: 0;
+  }
+
+  #prof-img-box {
+    height: 20vw;
+    width: 20vw;
   }
 
   #brand {
@@ -632,11 +665,16 @@ nav ul li a:hover {
   #social-me {
     flex: inherit;
     margin-top: 2em;
+    padding-bottom: 0;
   }
 
   #about-me {
     flex: 1;
     padding: 1.5em 2em;
+  }
+
+  #about-me > p {
+    margin: 0;
   }
   
   .checkbtn {
@@ -651,18 +689,6 @@ nav ul li a:hover {
 
   nav ul li a {
     font-size: 1.2em;
-  }
-
-  nav ul.menu-clicked {
-    background: rgba(0, 0, 0, 0.9);
-    text-align: right;
-    display: block;
-    position: fixed;
-    width: 100%;
-    /* height: 100vh; */
-    top: 100px;
-    left: 0;
-    transition: all 0.5s;
   }
 
   .page-section:not(#home) {
